part3/todo-manifests/todo-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # namespace: todo-app
  name: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
      - name: todo-backend
        image: yuc217/todo-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
