part3/todo-manifests/todo-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # namespace: todo-app
  name: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
      - name: todo-frontend
        image: yuc217/todo-frontend:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
        # resources:
        #   requests:
        #     memory: "256Mi"
        #     cpu: "500m"
        #   limits:
        #     memory: "512Mi"
        #     cpu: "1"
