part3/todo-manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  # namespace: todo-app
  name: postgres
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
