part3/todo-manifests/todo-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app
  name: todo-frontend-service
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3000
